<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutmiscellaneous"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/_12sdp"
    android:background="@drawable/bg_layoutmiscellaneous"
    app:behavior_peekHeight="@dimen/_40sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">
    <TextView
        android:id="@+id/Textmiscellaneous"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center"
        android:fontFamily="@font/medium"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:text="@string/Miscellaneous" />
    <LinearLayout
        android:id="@+id/colormiscellaneous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewcolor"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_notes_color_1"/>

            <ImageView
                android:id="@+id/imagecolor1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/save"
                app:tint="@color/black" />



        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewcolor2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_notes_color_2"/>

            <ImageView
                android:id="@+id/imagecolor2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/black" />



        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewcolor3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_notes_color_3"/>

            <ImageView
                android:id="@+id/imagecolor3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/black" />



        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewcolor4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_notes_color_4"/>

            <ImageView
                android:id="@+id/imagecolor4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/black" />



        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewcolor5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_notes_color_5"/>

            <ImageView
                android:id="@+id/imagecolor5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/black" />



        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewcolor6"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_notes_color_6"/>

            <ImageView
                android:id="@+id/imagecolor6"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/black" />



        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewcolor7"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_notes_color_7"/>

            <ImageView
                android:id="@+id/imagecolor7"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/black" />



        </FrameLayout>
        <TextView
            android:id="@+id/TextmiscellaneousView"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="1"
            android:fontFamily="@font/regular"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_9ssp"
            android:text="@string/select_color" />





    </LinearLayout>
<!--    <LinearLayout-->
<!--        android:id="@+id/addImagelayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="@dimen/_35sdp"-->
<!--        android:orientation="horizontal"-->
<!--        android:gravity="center_vertical"-->
<!--        android:layout_margin="@dimen/_8sdp">-->
<!--        <ImageView-->
<!--            android:id="@+id/addImage"-->
<!--            android:layout_width="@dimen/_25sdp"-->
<!--            android:layout_height="@dimen/_25sdp"-->
<!--            android:layout_marginStart="@dimen/_8sdp"-->
<!--            android:layout_marginEnd="@dimen/_8sdp"-->
<!--            android:src="@drawable/ic_image"-->
<!--            app:tint="@color/black"-->
<!--            android:padding="@dimen/_3sdp"-->
<!--            />-->
<!--        <TextView-->
<!--            android:id="@+id/tvaddImage"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="@dimen/_35sdp"-->
<!--            android:gravity="center_vertical"-->

<!--            android:layout_weight="1"-->
<!--            android:fontFamily="@font/medium"-->
<!--            android:includeFontPadding="false"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="@dimen/_13ssp"-->
<!--            android:text="Add Image" />-->

<!--    </LinearLayout>-->


</LinearLayout>